# OOP_labs

./: CMakeLists.txt  func.hpp  main.cpp  test.cpp
lab1/: CMakeLists.txt  func.cpp
